z-index fix

--- a/reference.scss
+++ b/reference.scss
@@ -121,6 +121,7 @@ a {
     font-size: 16px;
     line-height: 1.4;
     position: fixed;
+    z-index: 2;
     top: 0;
     bottom: 0;
     left: 0;
